--- a/thinkabit.html
+++ b/thinkabit.html
@@ -54,85 +54,118 @@
     <div class="section-div">
       <h1 id="project-title-secondary">Thinkabit Lab</h1>
       <h6>ux researcher // UC San Diego 2016</h6>
-      <div class="row">
+      <div class="row" style="padding-top: 24px">
+        <div class="three columns">
+          <h6><strong>timeline</strong><br>March 2016 - June 2016</h6>
+        </div>
+        <div class="three columns">
+          <h6><strong>methods &amp; tools</strong><br>Ideation<br>Paper Prototyping<br>Hi-Fi Screen Design<br>Storyboarding<br>Needfinding<br>Interviewing</h6>
+        </div>
+        <div class="three columns">
+          <h6><strong>teammates</strong><br>Sophia Krause-Levy<br>Benjamin Lebell<br>Alex Mello<br>Susan Lee<br>Joel Rosenthal</h6>
+        </div>
+        <div class="three columns">
+          <h6><strong>about the project</strong><br>This project is for Cognitive Design Studio&semi; students learn to integrate research into design &amp; development and apply human-centered design through real-world opportunities.</h6>
+        </div>
+      </div>
+    </div>
+
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+
+    <!-- Problem Section -->
+    <div class="section-div" style="padding-top: 36px">
+      <h3 class="section-header">Qualcomm Thinkabit Lab</h3>
+      <p class="text">Our design focus revolved around Qualcomm's Thinkabit Lab, on their Thursday "Tinkering Nights". It's a chance for Qualcomm employees to bring their family members in to play around with some of the technology Qualcomm has to offer, such as their Arduino boards.</p>
+      <p class="text">The problem with the Thinkabit Lab is that it can be quite intimidating for newcomers and even returners who are unsure how to proceed. The lab space is poorly organized. Due to the small amount of hosts, people are not always greeted when they enter which leads to further confusion and intimidation. When this occurs people are much less likely to enjoy their experience and return in the following weeks.</p>
+
+      <h5><strong>Competitive Analysis</strong></h5>
+      <p class="text">In the beginning, we had a very vague understanding of our design opportunity. We knew we would be helping Qualcomm employees engage in tinkering and building activities, but did not know the manner in which to do so. Therefore, we each conducted two competitive analyses and interviews to better understand the existing services and organizations that utilize a type of "makerspace". From this we learned about some existing features of similar makerspace environments that generate a beneficial and immersive experience.</p>
+
+      <div class="row" style="padding-left: 48px; padding-right: 48px">
         <div class="twelve columns">
-          <img class="landing-img u-max-full-width" src="images/teamme-final.png">
+          <img class="landing-img inline-img u-max-full-width" src="images/thinkabit-companalysis.png">
         </div>
       </div>
 
-      <h5 style="padding-bottom: 24px;"><strong>tl&semi;dr&colon;</strong> I was in charge of designing a team formation UI tool for instructors called Teammatic. It features a clear, intuitive system for efficiently creating teams given a series of customizable constraints, i.e. availability, leadership, gender distribution. </h5>
+      <h5><strong>The Needs</strong></h5>
+      <p class="text">For our first trip, we wanted to obtain a better understanding of the problem areas within the lab. Therefore, we conducted several interviews with the employees to find out what they felt were the main issues. We also observed individuals while they were tinkering and navigating throughout the lab. After our initial findings, it became clear that there was a lack of general information on the Lab, as well as what materials were available to use. This, coupled with a lack of provided help led to frustrated users&colon;</p>
+
+      <div class="row" style="padding-left: 48px; padding-right: 48px">
+        <div class="twelve columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/thinkabit-userNeeds.png">
+        </div>
+      </div>
     </div>
 
-    <!-- Problem Section -->
-    <div class="section-div">
-      <h3 class="section-header">The Problem</h3>
-      <p class="text">Creating good teams is hard. We found this especially so in the education system; as an instructor, the goal is to formulate efficient teams as soon as possible in order to progress through the material in a timely manner. Our initial findings found that instructors either 1) spent too much time trying to initially assess their students’ skills &amp; qualities before organizing teams, or 2) randomly (or with little assessment) assigned teams that had varying levels of success.</p>
-      <br>
-      <h5 style="padding-bottom: 24px; opacity: 0.75">We set out to create a tool that would make forming teams more effective and easy for instructors.</h5>
+    <br>
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+
+    <!-- Implementation Section -->
+    <div class="section-div" style="padding-top: 36px">
+      <h3 class="section-header">Ideation to Implementation</h3>
+      <p class="text">Having 10 weeks to complete this project, my team and I developed a pseudo-Agile approach to better streamline our goals. Each time we met at the Thinkabit Lab, the work was distributed in a way that provided equal attention to both research (i.e. interviews, observations) and prototype development. Aside from in-class discussions, we also designated 1-2 times to meet outside to update weekly progress via a GoogleDoc.</p>
+
+      <!-- Fitted IA picture -->
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/fitted-ia.png">
+        </div>
+      </div>
+
+      <h6 class="img-caption">
+        <ol>
+          <li><strong>Homepage</strong>&colon; Browse products based on either brand recommendations by the app or explore current fashion trends. Promotes discoverability and aimed to maintain user attention.</li>
+          <li><strong>Liked Products</strong>&colon; The Liked Products section allows users to look back at items they were interested in, but perhaps did not intend to purchase at the moment they discovered it.</li>
+          <li><strong>Search</strong>&colon; Specific browsing for items based on brand or design type (shirts, pants, etc.). Includes navigation into Product View, which provides users with information on the selected item such as personalized fitting style and user reviews.</li>
+          <li><strong>Shopping Cart</strong>&colon; As with any app that provides an e-commerce experience, a shopping cart is available for users to keep track of to-be purchased items. IA follows that of a standard online-shopping format.</li>
+          <li><strong>Profile</strong>&colon; Body preference settings are found here. Users can edit these preferences based on their needs and the app will respond accordingly, i.e. automatically filter results to be within user sizing parameters.</li>
+        </ol>
+      </h6>
     </div>
 
-    <!-- Process Section -->
-    <div class="section-div">
-      <h3 class="section-header">Our Process</h3>
-      <p class="text">Initial research went into trying to find existing tools that tried solving the problem of team formation. We found CATME (Comprehensive Assessment of Team Member Effectiveness) to be the only existing solution, which uses their Team-Maker tool to collect student information, and utilizes the data to assign teams according to a criteria specified by the instructor. However, user feedback has shown varying success within classrooms. Case study here.<br><br>Based on this and additional user interviews, our team established three design principles that would help guide our design decision throughout this process.</p>
-      <br>
-      <h5 style="padding-bottom: 16px; opacity: 0.75">We wanted to build a tool that would:
-        <ul>
-          <li>help instructors <strong>quickly form teams</strong></li>
-          <li><strong>provide instructors with insightful feedback</strong> on team compatibility</li>
-          <li><strong>be simple and easy</strong> for instructors to use</li>
-        </ul>
-      </h5>
-      <p class="text">The first thing we wanted to tackle was how instructors would actually form teams; we would focus on the onboarding process after. After a few paper-and-pen sketching sessions, we came up with a few ideas and drew them up as wireframes.</p>
-
-      <br><h3>image goes here</h3><br>
-
-      <p class="text">Quickly ideating and prototyping became key here. We wanted to find a balance between providing instructors with enough student information to make informed decisions while also having a large enough workspace to create/edit teams. Further data gathering helped us scrap the Student Quickview component in our initial 3-column design to  a final 2-column design that featured both a larger workspace and filtered Student Roster component (see image below).</p>
-
-      <br><h3>image goes here</h3><br>
-
-      <h5 style="padding-bottom: 16px; opacity: 0.75">The switch helped us address these issues:
-        <ul>
-          <li><strong>quickly form teams</strong> - indicate team size, input needed constraints, and voila&colon; Teammatic does the work</li>
-          <li><strong>provide instructors with insightful feedback</strong> - team compatibility &#37; present; action history to track most recent action</li>
-          <li><strong>be simple and easy</strong> - no confusing, unintuitive buttons or icons&semi; clear, even spacing between text and components</li>
-        </ul>
-      </h5>
-    </div>
+    <br>
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
 
     <!-- Solution Section -->
-    <div class="section-div">
-      <h3 class="section-header">Our Solution</h3>
-      <p class="text">Teammatic handles student availability, leadership attribute, gender, role distribution, and student preferences for possible teammates. Once the data is received, instructors will have the ability to choose constraints of how they want to create teams. The algorithm used for the team suggestions will account for these various constraints. After a suggested group of teams have been formed, the instructor will have the ability to modify these teams to their liking.</p>
+    <div class="section-div" style="padding-top: 36px">
+      <h3 class="section-header">Design Details</h3>
+      <h5><strong>Sizing Recommendations</strong></h5>
+      <p class="text">Fitted provides personalized recommendations across all products. For each product view, the user gets an indication of how well the item is going to fit on their body (based on the preferences they provide).</p>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img u-max-full-width" style="padding-left: 64px; padding-right: 64px" src="images/fitted-productDetails.png">
+        </div>
+      </div>
 
-      <p class="text">Student Roster (v0.3), (v0.7), (v1.0).<br>This is one of the UI components that was prototyped the most. We really tried to find a balance between information visibility and screen real-estate. Including a filter makes it easier for instructors to view the information they need at any given time.</p>
+      <p class="text">Each item the user views will have a percentage that informs them of how accurate the fit will be based on their size. The option can be changed, giving users freedom and flexibility to choose how well the item should fit them. Reviews also further inform users because we understand the importance of having constant feedback from real-world experiences.</p>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img u-max-full-width" style="padding-left: 48px; padding-right: 48px" src="images/fitted-flowProgression.png">
+        </div>
+      </div>
 
-      <p class="text">Student Swap Process (v1.0).<br>We really wanted to give instructors the ability to swap students between teams, both manually and with suggestions (highlighted in green) from the interface. Doing so promotes the idea of a mixed-initiative interface: instructors can work within the given UI, but also have the flexibility to make changes where desired.</p>
+      <p class="text">This is the bread and butter of Fitted. Users have the freedom to adjust their body profile based on their own preferences. Whether users want an overall tighter fit in the clothes they buy, or only in the torso length, they have the ability to indicate that and Fitted will filter and tailor their results accordingly.</p>
 
-      <br><h3>image goes here</h3><br>
+      <div class="row">
+        <div class="seven columns">
+          <img class="landing-img u-max-full-width" src="images/fitted-bodyPref.png">
+        </div>
+        <div class="one column"></div>
+        <div class="four columns">
+          <img class="landing-img u-max-full-width" src="images/fitted-editProf.gif">
+        </div>
+      </div>
 
-      <p class="text">Constraint Modal (v0.3), (v0.6), (v1.0).<br>Apart from the minor UI changes, our research showed that instructors wanted to see all available constraints possible and choose accordingly with the least amount of interaction cost. Don’t mind the varying modal sizes…</p>
-    </div>
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
 
-    <!-- Outcomes Section -->
-    <div class="section-div">
-      <h3 class="section-header">Outcomes</h3>
-      <p class="text">We conducted a study with 14 teaching assistants from various group-based courses, asking them to create teams with a set of constraint requirements, i.e. 4 students per team, one student per team, gender balance. As you can see from the results below, Teammatic outperformed our participants in both time and overall teammate compatibility.</p>
+    <!-- Next Steps Section -->
+    <div class="section-div" style="padding-top: 36px">
+      <h3 class="section-header">Next Steps</h3>
+      <p class="text">There’s a lot I would like to do with future features. My ideal next steps would be&colon; <strong>personalized styling recommendations</strong> (shoutout to Amazon Echo) and <strong>C2C marketplace capability</strong> for renting and selling unused clothing. Providing these features will allow for a better in-app experience, and I hope the data we collect will help validate these decisions.</p>
 
-      <br><h3>image goes here</h3><br>
-
-      <p class="text"><strong>Lessons learned</strong></p>
-      <p class="text">Keeping track of all the students' information was the biggest problem. Given the many requirements, many participants chose to ignore the soft constraints (&#35; of overlapping schedule availability, &#35; of leaders per team, etc.) and focused their time on the hard constraints (# of students per team, student preferences, etc.) listed. It was a common trend that participants would eventually start to randomly place students together without any regard to the constraints given.</p>
-
-      <p class="text">Teammatic was a research project that served the basis for my friend Carolyn’s thesis. I wanted to help her not only because she was a great person to work with, but because I really empathized with the problem that was presented. Is there really anything worse than a group member who slacks off?<br><br>While designing Teammatic, we already accepted that perfect team formation is impossible. However, we learned that instructors are generally happy with auto-generated teams based on student compatibility, as long as we provided them with the freedom and flexibility to make changes when desired, i.e. a mixed-initiative interface.</p>
-
-      <p class="text"><strong>Moving forward</strong></p>
-      <p class="text">The interface is a work in progress, but we are heading in the right direction based on positive user feedback (hooray!). Currently Teammatic only has the ability to generate teams; it has yet to become a fully working product. It would be ideal to incorporate the entire team formation process into Teammatic, from gathering student data, to forming teams, to post-course feedback. <br><br>For now, Teammatic is being used by a few involved professors, who will continue to give us insight into how we can improve the interface and how we might implement new, undiscovered features.
-      </p>
+      <p class="text">The realm of online shopping is always expanding and having certain, personalized information at our fingertips can better help us in finding the right clothes.</p>
     </div>
 
     <!-- Contact Section -->
