media query for contact

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <h5 style="line-height: 0px;"><strong>CONTACT</strong></h5>
       <h6 class="section-caption">call me, beep me if you wanna reach me</h6>
       <div style="padding-top: 0px">
-        <h3 style="padding-bottom: 24px;">
+        <h3 class="media-contact" style="padding-bottom: 24px;">
           <a href="mailto:awtran16@gmail.com?Subject=Hello!" target="_top" class="contact-a">
             Email
           </a>
