--- a/thinkabit.html
+++ b/thinkabit.html
@@ -105,68 +105,91 @@
       <h3 class="section-header">Ideation to Implementation</h3>
       <p class="text">Having 10 weeks to complete this project, my team and I developed a pseudo-Agile approach to better streamline our goals. Each time we met at the Thinkabit Lab, the work was distributed in a way that provided equal attention to both research (i.e. interviews, observations) and prototype development. Aside from in-class discussions, we also designated 1-2 times to meet outside to update weekly progress via a GoogleDoc.</p>
 
-      <!-- Fitted IA picture -->
+      <!-- Timeline picture -->
       <div class="row">
         <div class="twelve columns">
-          <img class="landing-img inline-img u-max-full-width" src="images/fitted-ia.png">
+          <img class="landing-img inline-img u-max-full-width" src="images/thinkabit-timeline.png">
         </div>
       </div>
 
-      <h6 class="img-caption">
-        <ol>
-          <li><strong>Homepage</strong>&colon; Browse products based on either brand recommendations by the app or explore current fashion trends. Promotes discoverability and aimed to maintain user attention.</li>
-          <li><strong>Liked Products</strong>&colon; The Liked Products section allows users to look back at items they were interested in, but perhaps did not intend to purchase at the moment they discovered it.</li>
-          <li><strong>Search</strong>&colon; Specific browsing for items based on brand or design type (shirts, pants, etc.). Includes navigation into Product View, which provides users with information on the selected item such as personalized fitting style and user reviews.</li>
-          <li><strong>Shopping Cart</strong>&colon; As with any app that provides an e-commerce experience, a shopping cart is available for users to keep track of to-be purchased items. IA follows that of a standard online-shopping format.</li>
-          <li><strong>Profile</strong>&colon; Body preference settings are found here. Users can edit these preferences based on their needs and the app will respond accordingly, i.e. automatically filter results to be within user sizing parameters.</li>
-        </ol>
-      </h6>
+      <h3 class="section-header">Conducting Research</h3>
+      <p class="text">Given that we had exposure to the lab only once a week, we sought to take advantage of the time we had by conducting multiple forms of data collection. While our target audience was predetermined, we still had to find ways to empathize with this group of people. From our initial interactions, we knew there was a wide range of experience levels among the tinkerers, and that better categorizing and understanding the specific needs of each of these subgroups would be essential to creating a solution. To determine this, we performed interviews with all of the employees and children present each time we went to the lab.</p>
+
+      <h3 class="section-header">Data Interpretation</h3>
+      <p class="text">I conducted a number of interviews, making sure to ask open-ended questions about their experience in the Lab. What I gathered was that there were a lot of first-time users, and there was a lot of confusion in getting started. We broke our findings down into 5 these five main categories. In each, our interviews and immersion experiences pointed out the problems. From there, we asked ourselves, "what types of prototypes can we generate that addresses these problem areas?"</p>
+
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/thinkabit-problems.png">
+        </div>
+      </div>
+
+      <p class="text">The affinity diagram helped us determine the different employees and their needs. We also created personas using the data we had collected from previous weeks. These personas highlight the different types of people that come into the lab and allowed us to focus on the specific characters, instead of typical demographics and bring their needs to life. They included: first timers, beginners, intermediate, experts and parents with children. This helped us determine the different target audiences and what they expect to get out of the lab, as well as what problems they currently have.</p>
     </div>
 
     <br>
     <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
 
-    <!-- Solution Section -->
     <div class="section-div" style="padding-top: 36px">
-      <h3 class="section-header">Design Details</h3>
-      <h5><strong>Sizing Recommendations</strong></h5>
-      <p class="text">Fitted provides personalized recommendations across all products. For each product view, the user gets an indication of how well the item is going to fit on their body (based on the preferences they provide).</p>
+      <h3 class="section-header">Prototypes</h3>
+      <p class="text">One of the leading ideas was to re-organize the space and put up labels, but that only helped solve 2 of the categories. In the end, we decided to make a pamphlet, as we felt it was the best solution that could address the variety of problem areas.</p>
 
+      <p class="text">For the pamphlet I worked with Alex and Sophia to go through several stages of testing. At first, we had a simple version that was created by folding together paper, with post-it notes on each page that included the potential item that would go there. These included a map, table of contents, and list of materials.</p>
+
+      <!-- Pamphlet picture -->
       <div class="row">
         <div class="twelve columns">
-          <img class="landing-img u-max-full-width" style="padding-left: 64px; padding-right: 64px" src="images/fitted-productDetails.png">
+          <img class="landing-img inline-img u-max-full-width" src="images/thinkabit-pamphlet1.jpeg">
         </div>
       </div>
 
-      <p class="text">Each item the user views will have a percentage that informs them of how accurate the fit will be based on their size. The option can be changed, giving users freedom and flexibility to choose how well the item should fit them. Reviews also further inform users because we understand the importance of having constant feedback from real-world experiences.</p>
+      <p class="text">One of the leading ideas was to re-organize the space and put up labels, but that only helped solve 2 of the categories. In the end, we decided to make a pamphlet, as we felt it was the best solution that could address the variety of problem areas. For the pamphlet I worked with Alex and Sophia to go through several stages of testing. At first, we had a simple version that was created by folding together paper, with post-it notes on each page that included the potential item that would go there. These included a map, table of contents, and list of materials.</p>
 
+      <p class="text">By interviewing 10 employees the order of the pages they believed each aspect of the pamphlet should go, we began to determine its layout. The results showed that the majority of people thought tracking progress should go on page 5 (70&#37;). The map should go on page 3 (30&#37;) or 6 (30). The list of materials should go on page 4 (50&#37;). The profile of hosts should go on page 3 (40&#37;). The purpose of the lab should go on page 2 (60&#37;), and the table of contents should go on page 1 (70&#37;) or may not be needed (30&#37;). We also asked people if they believed we should make the pamphlet in the format of a book or stick with a pamphlet, 14 people said a pamphlet and 6 said a book. With this in mind, the table of contents became unnecessary and was removed. Since we plan on having the pamphlet available in the lab as well, we asked people to look at a prototype and observed where they looked first to help further determine ordering of pages.</p>
+
+      <!-- Pamphlet picture -->
       <div class="row">
-        <div class="twelve columns">
-          <img class="landing-img u-max-full-width" style="padding-left: 48px; padding-right: 48px" src="images/fitted-flowProgression.png">
+        <div class="six columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/thinkabit-prototype1.jpg">
+        </div>
+        <div class="six columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/thinkabit-prototype2.jpeg">
         </div>
       </div>
-
-      <p class="text">This is the bread and butter of Fitted. Users have the freedom to adjust their body profile based on their own preferences. Whether users want an overall tighter fit in the clothes they buy, or only in the torso length, they have the ability to indicate that and Fitted will filter and tailor their results accordingly.</p>
-
-      <div class="row">
-        <div class="seven columns">
-          <img class="landing-img u-max-full-width" src="images/fitted-bodyPref.png">
-        </div>
-        <div class="one column"></div>
-        <div class="four columns">
-          <img class="landing-img u-max-full-width" src="images/fitted-editProf.gif">
-        </div>
-      </div>
+    </div>
 
     <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
 
-    <!-- Next Steps Section -->
     <div class="section-div" style="padding-top: 36px">
-      <h3 class="section-header">Next Steps</h3>
-      <p class="text">There’s a lot I would like to do with future features. My ideal next steps would be&colon; <strong>personalized styling recommendations</strong> (shoutout to Amazon Echo) and <strong>C2C marketplace capability</strong> for renting and selling unused clothing. Providing these features will allow for a better in-app experience, and I hope the data we collect will help validate these decisions.</p>
+      <h3 class="section-header">Our Solution</h3>
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img u-max-full-width" src="images/thinkabit-final.jpeg">
+        </div>
+      </div>
 
-      <p class="text">The realm of online shopping is always expanding and having certain, personalized information at our fingertips can better help us in finding the right clothes.</p>
+      <p class="text">Our design solution includes several parts. We redesigned the email sent out to employees so that it is more concise and does not give any false beliefs of the Lab. It is a simple overview to explain the purpose of the Lab, tell people what is available to work with, and who can come. Attached to this is a PDF of the pamphlet (picture above) that explains the Lab in more detail.</p>
+
+      <p class="text">On the back of the pamphlet we have the "Getting Started" section. This was driven by concerns users had on how to gauge experience level. We had also tested preferences, such as taglines and bio descriptions. Inside the pamphlet, we included a bio for the Lab and its hosts, as well as a list of the materials and a map. Again, the decision to include this was driven our findings of 1) difficulty of navigating the space, and 2) understanding what is available to use.</p>
+
+      <p class="text">The second page of the pamphlet has a short description of the lab to briefly explain its purpose during tinkering nights. This way, people get a sense of the goals of the nights before digging deeper into the pamphlet. Overall, the intentions of the pamphlet were to provide users, especially first-timers, a sense of comfort wih the vast array of materials they had the freedom to work with. It would help the onboarding process of working with the Arduino and laser printer much easier and reduce the need for troubleshooting.</p>
     </div>
+
+    <br>
+    <hr style="border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);">
+
+    <div class="section-div" style="padding-top: 36px">
+      <h3 class="section-header">Conclusion</h3>
+
+      <p class="text">With the 10 weeks over, we ended up with our working product of the pamphlet guide to share with members of the Lab. We received a number of positive responses, a majority of which were happy with the easy-to-access information that had not really exisited up until this point. By targeting the key problem areas of usability within the Lab, we were able to come up with a feasible solution that utilized these ethnographic prinicples of observation and human-centered research.</p>
+
+      <div class="row">
+        <div class="twelve columns">
+          <img class="landing-img inline-img u-max-full-width" src="images/thinkabit-conclusion.png">
+        </div>
+      </div>
+    </div>
+
 
     <!-- Contact Section -->
     <a id="contact"></a>
