changes to index

--- a/index.html
+++ b/index.html
@@ -98,18 +98,26 @@
       <h5 style="line-height: 0px;"><strong>PROJECTS</strong></h5>
       <h6 class="section-caption">for those pesky nights &amp; weekends</h6>
       <!-- SlackRR -->
-      <div class="project-div" style="padding-top: 24px">
+      <!-- <div class="project-div" style="padding-top: 24px">
         <a href="#">
           <h1 id="project-title" style="color: #74E3B5;">SlackRR</h1>
         </a>
         <p>implementing read receipts in Slack</p>
+      </div> -->
+      <div class="project-div">
+        <h1 id="project-title" style="opacity: 0.5;">SlackRR</h1>
+        <p id="project-wip"><strong>COMING SOON</strong> - implementing read receipts in Slack</p>
       </div>
       <!-- Trackfit -->
-      <div class="project-div">
+      <!-- <div class="project-div">
         <a href="#">
           <h1 id="project-title" style="color: #74E3B5;">Trackfit</h1>
         </a>
         <p>tired of confusing fitness apps so I'm attempting to ship my own</p>
+      </div> -->
+      <div class="project-div">
+        <h1 id="project-title" style="opacity: 0.5;">Trackfit</h1>
+        <p id="project-wip"><strong>COMING SOON</strong> - tired of confusing fitness apps so I'm attempting to ship my own</p>
       </div>
       <!-- Focus.In -->
       <div class="project-div">
