--- a/thinkabit.html
+++ b/thinkabit.html
@@ -185,7 +185,7 @@
 
       <div class="row">
         <div class="twelve columns">
-          <img class="landing-img inline-img u-max-full-width" src="images/thinkabit-conclusion.png">
+          <img class="landing-img u-max-full-width" src="images/thinkabit-conclusion.png" style="padding-right: 96px; padding-left: 48px">
         </div>
       </div>
     </div>
