--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>The Portfolio of Alex Tran</title>
-  <meta name="description" content="">
+  <meta name="description" content="Hello, I'm a design-centered human.">
   <meta name="author" content="">
+  <meta property="og:title" content="The Portfolio of Alex Tran" />
+  <meta property="og:description" content="Hello, I'm a design-centered human." />
+  <meta property="og:image" content="images/metaPNG.png" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
