halfway done with timekeeper

--- a/thinkabit.html
+++ b/thinkabit.html
@@ -5,9 +5,12 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Alex Tran: Thinkabit Lab</title>
-  <meta name="description" content="">
+  <title>The Portfolio of Alex Tran</title>
+  <meta name="description" content="Hello, I'm a design-centered human.">
   <meta name="author" content="">
+  <meta property="og:title" content="The Portfolio of Alex Tran" />
+  <meta property="og:description" content="Hello, I'm a design-centered human." />
+  <meta property="og:image" content="images/metaPNG.png" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
